--- a/app/src/main/res/layout/content_main_parking.xml
+++ b/app/src/main/res/layout/content_main_parking.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.marcos.smartparking.MainParkingActivity"
-    tools:showIn="@layout/app_bar_main_parking">
+    tools:showIn="@layout/main_parking">
 
     <Button
         android:id="@+id/stopButton"
         android:layout_width="200dp"
         android:layout_height="53dp"
-        android:background="@android:color/holo_red_light"
-        android:text="Finalizar"
+        android:background="@drawable/button"
+        android:text="@string/parking_finish"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         android:layout_marginStart="71dp"
@@ -28,8 +28,8 @@
         android:id="@+id/startButton"
         android:layout_width="200dp"
         android:layout_height="53dp"
-        android:background="@android:color/holo_green_dark"
-        android:text="Comenzar"
+        android:background="@drawable/button"
+        android:text="@string/parking_start"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         android:layout_marginStart="71dp"
@@ -47,7 +47,7 @@
         android:layout_height="39dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Dominio"
+        android:hint="@string/domain"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/startButton"
         android:layout_marginStart="12dp"
