--- a/app/src/main/res/layout/main_parking.xml
+++ b/app/src/main/res/layout/main_parking.xml
@@ -1,25 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:background="@drawable/msn2"
+    tools:context="com.example.marcos.smartparking.HomeActivity"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:gravity="center">
 
     <include
-        layout="@layout/app_bar_main_parking"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:id="@+id/include"
+        layout="@layout/content_main_parking" />
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_main_parking"
-        app:menu="@menu/main_parking_drawer" />
-
-</android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
