--- a/app/src/main/res/layout/content_main_parking.xml
+++ b/app/src/main/res/layout/content_main_parking.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.marcos.smartparking.MainParkingActivity"
+    android:gravity="center"
     tools:showIn="@layout/main_parking">
 
     <Button
@@ -55,5 +56,14 @@
         android:layout_marginBottom="33dp"
         app:layout_constraintLeft_toLeftOf="@+id/startButton"
         android:layout_marginLeft="16dp" />
+
+    <TextView
+        android:id="@+id/totalCost"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="22dp"
+        app:layout_constraintTop_toBottomOf="@+id/stopButton"
+        tools:textColor="@color/colorAccent" />
 
 </android.support.constraint.ConstraintLayout>
