--- a/app/src/main/res/layout/content_main_parking.xml
+++ b/app/src/main/res/layout/content_main_parking.xml
@@ -20,7 +20,7 @@
         android:layout_marginStart="71dp"
         android:layout_marginEnd="71dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintTop_toBottomOf="@+id/startButton"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent" />
@@ -58,12 +58,22 @@
         android:layout_marginLeft="16dp" />
 
     <TextView
+        android:id="@+id/parkingStatus"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="22dp"
+        android:textSize="32sp"
+        app:layout_constraintTop_toBottomOf="@+id/stopButton"
+        tools:textColor="@color/colorAccent" />
+
+    <TextView
         android:id="@+id/totalCost"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_margin="22dp"
-        app:layout_constraintTop_toBottomOf="@+id/stopButton"
+        app:layout_constraintTop_toBottomOf="@+id/parkingStatus"
         tools:textColor="@color/colorAccent" />
 
 </android.support.constraint.ConstraintLayout>
