--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,9 +12,11 @@ android:gravity="center">
         android:id="@+id/parkingButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button"
         android:layout_margin="10dp"
-        android:text="@string/parking" />
+        android:background="@drawable/button"
+        android:text="@string/parking"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/storesButton"
@@ -23,7 +25,9 @@ android:gravity="center">
         android:layout_below="@+id/parkingButton"
         android:background="@drawable/button"
         android:layout_margin="10dp"
-        android:text="@string/stores" />
+        android:text="@string/stores"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"/>
 
     <Button
         android:id="@+id/availabilityButton"
@@ -32,5 +36,7 @@ android:gravity="center">
         android:layout_below="@+id/storesButton"
         android:background="@drawable/button"
         android:layout_margin="10dp"
-        android:text="@string/availability" />
+        android:text="@string/availability"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"/>
 </RelativeLayout>
