--- a/app/src/main/res/layout/activity_stores.xml
+++ b/app/src/main/res/layout/activity_stores.xml
@@ -15,4 +15,17 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/noResults"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawablePadding="5dp"
+        android:textSize="22sp"
+        android:gravity="center"
+        android:text="@string/no_data_available"
+        android:textColor="@android:color/black"
+        android:visibility="gone" />
+
 </RelativeLayout>
